// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<WfHamburgerMenu
  workflowId={1}
>
  <UncontrolledDropdown>
    <Dropdown
      isOpen={false}
      tag="div"
      toggle={[Function]}
    >
      <div
        className="dropdown"
      >
        <DropdownToggle
          aria-haspopup={true}
          color="secondary"
          data-toggle="dropdown"
        >
          <Button
            aria-expanded={false}
            aria-haspopup="true"
            className=""
            color="secondary"
            data-toggle="dropdown"
            onClick={[Function]}
            tag="button"
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btn btn-secondary"
              data-toggle="dropdown"
              onClick={[Function]}
              type="button"
            >
              ☰
            </button>
          </Button>
        </DropdownToggle>
        <DropdownMenu
          tag="div"
        >
          <div
            aria-hidden={true}
            className="dropdown-menu"
            role="menu"
            tabIndex="-1"
          >
            <DropdownItem
              className="dropdown-menu-item"
              href="/workflows"
              tag="a"
              toggle={true}
            >
              <a
                className="dropdown-menu-item dropdown-item"
                href="/workflows"
                onClick={[Function]}
                tabIndex="0"
              >
                <span
                  className="t-d-gray content-3 ml-3"
                >
                  Your Workflows
                </span>
              </a>
            </DropdownItem>
            <div>
              <DropdownItem
                divider={true}
                tag="button"
                toggle={true}
              >
                <div
                  className="dropdown-divider"
                  onClick={[Function]}
                  tabIndex="-1"
                />
              </DropdownItem>
              <DropdownItem
                className="dropdown-menu-item"
                onClick={[Function]}
                tag="button"
                toggle={true}
              >
                <button
                  className="dropdown-menu-item dropdown-item"
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="t-d-gray content-3 ml-3"
                  >
                    Undo
                  </span>
                </button>
              </DropdownItem>
              <DropdownItem
                className="dropdown-menu-item"
                onClick={[Function]}
                tag="button"
                toggle={true}
              >
                <button
                  className="dropdown-menu-item dropdown-item"
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="t-d-gray content-3 ml-3"
                  >
                    Redo
                  </span>
                </button>
              </DropdownItem>
              <DropdownItem
                divider={true}
                tag="button"
                toggle={true}
              >
                <div
                  className="dropdown-divider"
                  onClick={[Function]}
                  tabIndex="-1"
                />
              </DropdownItem>
            </div>
            <DropdownItem
              className="dropdown-menu-item"
              href="http://blog.cjworkbench.org"
              tag="a"
              toggle={true}
            >
              <a
                className="dropdown-menu-item dropdown-item"
                href="http://blog.cjworkbench.org"
                onClick={[Function]}
                tabIndex="0"
              >
                <span
                  className="t-d-gray content-3 ml-3"
                >
                  Help
                </span>
              </a>
            </DropdownItem>
            <DropdownItem
              className="dropdown-menu-item"
              href="/account/logout"
              tag="a"
              toggle={true}
            >
              <a
                className="dropdown-menu-item dropdown-item"
                href="/account/logout"
                onClick={[Function]}
                tabIndex="0"
              >
                <span
                  className="t-d-gray content-3 ml-3"
                >
                  Logout
                </span>
              </a>
            </DropdownItem>
          </div>
        </DropdownMenu>
      </div>
    </Dropdown>
  </UncontrolledDropdown>
</WfHamburgerMenu>
`;

exports[`renders correctly for workflows list page 1`] = `
<WfHamburgerMenu>
  <UncontrolledDropdown>
    <Dropdown
      isOpen={false}
      tag="div"
      toggle={[Function]}
    >
      <div
        className="dropdown"
      >
        <DropdownToggle
          aria-haspopup={true}
          color="secondary"
          data-toggle="dropdown"
        >
          <Button
            aria-expanded={false}
            aria-haspopup="true"
            className=""
            color="secondary"
            data-toggle="dropdown"
            onClick={[Function]}
            tag="button"
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btn btn-secondary"
              data-toggle="dropdown"
              onClick={[Function]}
              type="button"
            >
              ☰
            </button>
          </Button>
        </DropdownToggle>
        <DropdownMenu
          tag="div"
        >
          <div
            aria-hidden={true}
            className="dropdown-menu"
            role="menu"
            tabIndex="-1"
          >
            <DropdownItem
              className="dropdown-menu-item"
              href="http://blog.cjworkbench.org"
              tag="a"
              toggle={true}
            >
              <a
                className="dropdown-menu-item dropdown-item"
                href="http://blog.cjworkbench.org"
                onClick={[Function]}
                tabIndex="0"
              >
                <span
                  className="t-d-gray content-3 ml-3"
                >
                  Help
                </span>
              </a>
            </DropdownItem>
            <DropdownItem
              className="dropdown-menu-item"
              href="/account/logout"
              tag="a"
              toggle={true}
            >
              <a
                className="dropdown-menu-item dropdown-item"
                href="/account/logout"
                onClick={[Function]}
                tabIndex="0"
              >
                <span
                  className="t-d-gray content-3 ml-3"
                >
                  Logout
                </span>
              </a>
            </DropdownItem>
          </div>
        </DropdownMenu>
      </div>
    </Dropdown>
  </UncontrolledDropdown>
</WfHamburgerMenu>
`;
